# security-blog

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.txt
.github/workflows/: ci.yml  docker-image.yml
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment_parent.py  0003_remove_comment_parent.py  0004_auto_20191015_0853.py  0005_auto_20211014_1338.py  0006_about_alter_comment_active_alter_post_status.py  0007_contact_policy_remove_about_address_and_more.py
docs/: blog.migrations.rst  blog.rst  conf.py  index.rst  modules.rst  mysite.rst
mysite/: settings.py  urls.py
templates/: about.html  base.html  contact.html  index.html  policy.html  post_detail.html  sidebar.html
