[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Muhammet Karataş <you@example.com>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-debug-toolbar = "^3.8.1"
django-crispy-forms = "^1.14.0"
django-summernote = "^0.8.20.0"

### CODE QUALITY ######
black = "^22.12.0"
isort = "^5.12.0"

##### DOCS ########
sphinx = "^6.1.3"
furo = "^2022.12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
